--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,340</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,880</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">script.Test1</td><td><a href="#m0">test1</a></td><td rowspan="1">1726149706938</td><td rowspan="1">20</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">script.Test1</td><td><a href="#m0">test1</a></td><td rowspan="1">1728472894615</td><td rowspan="1">1213</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">script.Test1#test1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">test1....</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">script.Test1#test1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Wenissa<br/>test1....</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
